2003-10-23  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* dir.c (do_reload_dir): Fix memory leaks.

2003-10-23  Pavel Roskin  <proski@gnu.org>

	* win.c (check_movement_keys): Remove "additional" argument,
	it's always 1.

	* view.c: (put_editkey): Rename to ...
	(view_handle_editkey): ... this.  Move here some logic from ...
	(view_handle_key): ... here.

	* view.c: Eliminate struct block_ptr_t and enum ViewSide.
	Rename ascii mode to text mode.

	* view.c (WView): Remove unused fields localcopy and file_dirty.
	Make boolean fields 1 bit wide.

	* view.c (toggle_hexedit_mode): New function, split from ...
	(toggle_wrap_mode): ... this.
	(view_labels): Fix overuse of the :? operator.  Don't allow
	editing files in quick view - it's easy to lose changes.

	* main.c (process_args): Use cast to avoid warning.

	* view.c (view_callback): Don't close the current dialog when
	the viewer is framed.

2003-10-16  Pavel Roskin  <proski@gnu.org>

	* main.c (update_one_panel_widget): Use VFS_SETCTL_FLUSH for the
	current directory.  This fixes Ctrl-R on fish.
	* vfsdummy.h: Remove unused functions.

	* main.c (process_args): Use VFS_SETCTL_LOGFILE for ftpfs.

2003-10-15  Pavel Roskin  <proski@gnu.org>

	* glibcompat.h: Define g_try_malloc as malloc for glib 1.2.x.

	* view.c (load_view_file): Use g_try_malloc() because the
	failure to allcate memory is acceptable here.
	Reported by Pavel S. Shirshov <pavelsh@mail.ru>

2003-10-14  Pavel Roskin  <proski@gnu.org>

	* tree.c: Remove dead code.
	* treestore.c (tree_store_add_entry): Make static.
	(tree_store_start_check): Likewise.

	* cmd.c: Cleanup of unneeded global functions and data.
	* color.c: Likewise.
	* dir.c: Likewise.
	* file.c: Likewise.
	* filegui.c: Likewise.
	* hotlist.c: Likewise.
	* layout.c: Likewise.
	* main.c: Likewise.
	* panelize.c: Likewise.
	* wtools.c: Likewise.

2003-10-12  Pavel Roskin  <proski@gnu.org>

	* screen.c (do_enter_on_file_entry): Remove annoying message "no